# CppTest_BasicNeuralNet

./: CMakeLists.txt  README.md  main.cpp
neuralnet/: neuralnet.cpp  neuralnet.h  randdouble.cpp
resource/: BpDeep.java  BpDeepTest.java
